--- a/src/locale/nl/LC_MESSAGES/django.po
+++ b/src/locale/nl/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-09-14 15:37+0200\n"
+"POT-Creation-Date: 2013-12-29 17:08+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Fako Berkers <email@fakoberkers.nl>\n"
 "Language-Team: Dutch <LL@li.org>\n"
@@ -17,52 +17,68 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: fakoberkers/settings.py:58
-msgid "English"
-msgstr "Engels"
+#: HIF/output/http/html/components/search.html:7
+msgid "search"
+msgstr "zoek"
 
-#: fakoberkers/settings.py:59
-msgid "Portuguese"
-msgstr "Portugees"
+#: HIF/output/http/html/image-translations/accepted.html:11
+msgid "Your query is being processed. Please wait."
+msgstr "Je zoekopdracht wordt uitgevoerd. Even geduld alsjeblieft."
 
-#: fakoberkers/settings.py:60
-msgid "Dutch"
-msgstr "Nederlands"
+#: HIF/output/http/html/image-translations/index.html:5
+#: HIF/output/http/html/image-translations/ok.html:5
+msgid ""
+"Search for a single word and see the canonical images for that word in five "
+"different languages."
+msgstr "Zoek naar één woord en zie de canon afbeeldingen voor dat woord in vijf verschillende talen."
 
-#: fakoberkers/settings.py:61
-msgid "German"
-msgstr "Duits"
-
-#: fakoberkers/settings.py:62
-msgid "Spanish"
-msgstr "Spaans"
-
-#: fakoberkers/settings.py:63
-msgid "French"
-msgstr "Frans"
-
-#: templatefiles/templates/double.html:4 templatefiles/templates/single.html:4
-#: templatefiles/templates/triple.html:4
-msgid "Results for"
-msgstr "Resultaten voor"
-
-#: templatefiles/templates/double.html:7 templatefiles/templates/single.html:7
-#: templatefiles/templates/triple.html:7
-msgid "Below are the results for"
-msgstr "Beneden staan de resultaten voor"
-
-#: templatefiles/templates/double.html:18
-#: templatefiles/templates/single.html:12
-msgid "No results found"
-msgstr "Geen resultaten gevonden"
-
-#: templatefiles/templates/no-results.html:5
+#: HIF/output/http/html/image-translations/no-content.html:9
 msgid "No results found in"
 msgstr "Geen resultaten gevonden in het"
 
-#: templatefiles/templates/no-results.html:5
+#: HIF/output/http/html/image-translations/no-content.html:9
 msgid "Did you mean to search in another language"
 msgstr "Was je bedoeling om in een andere taal te zoeken"
+
+#: HIF/output/http/html/image-translations/no-content.html:22
+msgid "Or search again for another word."
+msgstr "Of zoek opnieuw naar een ander woord"
+
+#: HIF/output/http/services/manifests.py:46
+msgid "No input provided"
+msgstr "Geen invoer"
+
+#: HIF/output/http/services/manifests.py:48
+msgid ""
+"We're sorry, we can't take more than one word as a query. Please try with "
+"one word at a time."
+msgstr ""
+"Sorry, we kunnen op dit moment niet meer dan één zoekterm verwerken. Probeer "
+"het alsjeblieft woord voor woord."
+
+#: fakoberkers/settings.py:47
+msgid "English"
+msgstr "Engels"
+
+#: fakoberkers/settings.py:48
+msgid "Portuguese"
+msgstr "Portugees"
+
+#: fakoberkers/settings.py:49
+msgid "Dutch"
+msgstr "Nederlands"
+
+#: fakoberkers/settings.py:50
+msgid "German"
+msgstr "Duits"
+
+#: fakoberkers/settings.py:51
+msgid "Spanish"
+msgstr "Spaans"
+
+#: fakoberkers/settings.py:52
+msgid "French"
+msgstr "Frans"
 
 #: templatefiles/templates/projects.html:5
 msgid "Projects available on this site"
@@ -71,7 +87,3 @@ msgstr "Beschikbare projecten op deze site"
 #: templatefiles/templates/projects.html:11
 msgid "And more to come"
 msgstr "En er komt nog meer"
-
-#: templatefiles/templates/search.html:10
-msgid "search"
-msgstr "zoek"
